Fixed overflow issue

--- a/style.css
+++ b/style.css
@@ -9,13 +9,20 @@ html {
     
 }
 
-.container {
+body {
     height: 100vh;
+    width: 100vw;
+}
+
+.container {
+    height: 100%;
+    width: 100%;
     background-color: gray;
     display: grid;
     grid-template-areas: 
         "sidebar header"
         "sidebar main";
+    
 }
 
 /* Sidebar */
@@ -24,7 +31,7 @@ html {
     max-height: 100vh;
     grid-area: sidebar;
     display: grid;
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-rows: repeat(12, minmax(0, 1fr));
     background-color: blue;
 }
 
@@ -130,14 +137,18 @@ html {
 .site-content {
     grid-area: main;
     display: grid;
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: minmax(0, 3fr) minmax(0, 1fr);
     grid-template-areas: 
         "project side-section"
     ;
+    max-height: 100%;
+    min-height: 0;
 }
 
 .project-container {
     grid-area: project;
+    max-height: 100%;
+    min-height: 0;
 }
 
 .project-header h2, .announcements-header h2, .trending-header h2 {
@@ -147,8 +158,10 @@ html {
 
 .project-grid {
     display: grid;
-    grid-template: repeat(3, 1fr) / 1fr 1fr;
+    grid-template: repeat(3, minmax(0, 1fr)) / repeat(2, minmax(0, 1fr));
     gap: 4rem;
+    max-height: 100%;
+    min-height: 0;
 }
 
 .project-card {
@@ -195,6 +208,8 @@ html {
         "trending"
         "."
     ;
+    max-height: 100%;
+    min-height: 0;
 }
 
 .announcements-container {
